<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- APP GLOBAL -->
    <string name="app_name">PomoDoIt</string>
    <string name="app_slogan">It\u0027s time to do it\u0021</string>
    <string name="action_settings">Settings</string>

    <!-- HOME ACTIVITY -->
    <string name="new_session">New session</string>
    <string name="history">History</string>
    <string name="help">About</string>
    <string name="settings">Settings</string>

    <!-- MAIN ACTIVITY : from here http://www.lifehack.org/articles/productivity/33-rules-boost-your-productivity.html -->
    <string name="btStart">Start!</string>
    <string name="btStop">Stop</string>
    <string name="btEnd">End</string>
    <string name="timerVal">25:00:00</string>
    <string name="msg_motive_0">HEY,\nARE YOU READY\nTO START ?!</string>
    <string name="msg_motive_1">RULE NR 1\nSTART\nSMALL.</string>
    <string name="msg_motive_2">RULE NR 2\nDAILY\nGOALS.</string>
    <string name="msg_motive_3">RULE NR 3\nNUKE\nIT!</string>
    <string name="msg_motive_4">RULE NR 4\nPEAK\nTIMES.</string>
    <string name="msg_motive_5">RULE NR 5\nMINI\nMILESTONES.</string>
    <string name="msg_motive_6">RULE NR 6\nSET\nA\nDEADLINE.</string>
    <string name="msg_motive_7">RULE NR 7\nTIMEBOXING.</string>
    <string name="msg_motive_8">RULE NR 8\nBATCH\nSIMILAR\nTASKS.</string>
    <string name="msg_motive_9">RULE NR 9\nCONE\nOF\nSILENCE.</string>
    <string name="msg_motive_10">RULE NR 10\nGET UP,\nEARLY.</string>
    
    <string-array name="msg_motive">
        <item>@string/msg_motive_1</item>
        <item>@string/msg_motive_2</item>
        <item>@string/msg_motive_3</item>
        <item>@string/msg_motive_4</item>
        <item>@string/msg_motive_5</item>
        <item>@string/msg_motive_6</item>
        <item>@string/msg_motive_7</item>
        <item>@string/msg_motive_8</item>
        <item>@string/msg_motive_9</item>
        <item>@string/msg_motive_10</item>
    </string-array>

    <!-- NAMEANDNOTE ACTIVITY -->
    <string name="felicitations">CONGRATS\u0021</string>
    <string name="submit">Submit</string>

    <!-- NEWSESSION ACTIVITY -->
    <string name="title_activity_new_session">New Session</string>
    <string name="nouvellesession">Do you want to start a new session?</string>
    <string name="oui">Yes</string>
    <string name="non">No</string>

    <!-- HISTORY ACTIVITY -->
    <string name="title_activity_history">History</string>
    <string name="irealized">I realized</string>
    <string name="defaultvalue">-</string>
    <string name="activities">activitie(s).</string>
    <string name="one_star">\u2605</string>
    <string name="two_star">\u2605\u2605</string>
    <string name="three_star">\u2605\u2605\u2605</string>
    <string name="four_star">\u2605\u2605\u2605\u2605</string>
    <string name="five_star">\u2605\u2605\u2605\u2605\u2605</string>
    <string name="action_delete_history">Delete history</string>
    <string name="msg_delete_history">Are you sure you want to delete all history?</string>
    <string name="msg_delete_activity">Are you sure you want to delete this activity?</string>

    <!-- PAUSE ACTIVITY -->
    <string name="title_activity_pause">Taking a break from work</string>
    <string name="msgPause">Coffee time, take a break\u0021</string>
    <string name="timerPauseVal">05:00:00</string>

    <!-- ABOUT ACTIVITY -->
    <string name="title_activity_help">About</string>
    <string name="imPomodoro_description">Pomodoro description</string>
    <string name="pomodoro_desc">What\u0027s Pomodoro?</string>
    <string name="video_link">https://www.youtube.com/watch?v=CT70iCaG0Gs</string>
    <string name="video_description">The Pomodoro Technique</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="title_activity_settings">Settings</string>
    <string name="msg_soundmode">Play sound?</string>
    <string name="msg_screenmode">Keep screen ON?</string>

    <!-- SLIDING IMAGES -->
    <string name="str_im_message">Message</string>
    <string name="str_im_coffee">Coffee</string>
    <string name="str_im_facebook">Facebook</string>
    <string name="str_im_music">Music</string>
    <string name="str_im_linkedin">LinkedIn</string>
    <string name="str_im_mail">Mail</string>
    <string name="str_im_internet">Internet</string>
    <string name="str_im_twitter">Twitter</string>

    <!-- ERROR MESSAGES -->
    <string name="err_loading_view">Error while loading a new view</string>
    <string name="err_noname">Error: Please give a name of your activity</string>
    <string name="err_nameexists">Error: Name already exists</string>
    <string name="err_activate_planemode">Error: Unable to activate plane mode</string>

</resources>