<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/fontGreen"
    tools:context="com.pomodoit.views.PauseActivity" >
    
    <ProgressBar
        android:id="@+id/progressBarPause"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dip" 
		android:maxHeight="20dip"
		android:progressDrawable="@drawable/progressbar_color_pause" />
     
    <TextView
        android:id="@+id/timerPauseValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBarPause"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/timerPauseVal"
        android:singleLine="true"
        android:maxLines="1"
        android:textColor="#ffffff"
        android:textSize="50sp" />
    
    <TextView
        android:id="@+id/tvPauseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/msgPause"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:layout_alignParentBottom="true"
        android:maxLines="1"
        android:singleLine="true" />
    
	<ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/timerPauseValue"
        android:layout_above="@id/tvPauseTitle"
        android:flipInterval="4000"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        android:layout_centerInParent="true">
        <!-- android:padding="70dp" -->
        
		<ImageView
            android:src="@drawable/im_message"
            android:contentDescription="@string/str_im_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:alpha=".75"/>
 
        <ImageView
            android:src="@drawable/im_coffee"
            android:contentDescription="@string/str_im_coffee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:alpha=".75"/>
 
        <ImageView
            android:src="@drawable/im_facebook"
            android:contentDescription="@string/str_im_facebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:alpha=".75"/>
 
        <ImageView
            android:src="@drawable/im_music"
            android:contentDescription="@string/str_im_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:alpha=".75"/>
 
        <ImageView
            android:src="@drawable/im_linkedin"
            android:contentDescription="@string/str_im_linkedin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:alpha=".75"/>
        
        <ImageView
            android:src="@drawable/im_mail"
            android:contentDescription="@string/str_im_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:alpha=".75"/>
 
        <ImageView
            android:src="@drawable/im_internet"
            android:contentDescription="@string/str_im_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:alpha=".75"/>
 
        <ImageView
            android:src="@drawable/im_twitter"
            android:contentDescription="@string/str_im_twitter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:alpha=".75"/>

    </ViewFlipper>

        
</RelativeLayout>
