<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fontRed"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pomodoit.views.MainActivity" >
    
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dip" 
		android:maxHeight="20dip"
		android:progressDrawable="@drawable/progressbar_color" />
    
    <TextView
        android:id="@+id/timerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/timerVal"
        android:textColor="#ffffff"
        android:lines="1"
        android:singleLine="false"
        android:textSize="50sp" />

    <Button
        android:id="@+id/btMain"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:minHeight="45dp" 
        android:maxHeight="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/fontDarkRed"
        android:textColor="#FFFFFF"
        android:text="@string/btStart" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btMain"
        android:layout_below="@id/timerValue"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/im_clock"
        android:gravity="center"
        android:text="@string/msg_motive_0"
        android:textColor="#FFFFFF"
        android1:textSize="28sp" />

</RelativeLayout>
